src/test/ui/rfc-2632-const-trait-impl/const-trait-bound-opt-out/in-trait-object.stderr
error: `?const` is not permitted in trait objects
  --> $DIR/in-trait-object.rs:10:6
   |
LL | impl ?const T {}
   |      ^^^^^^^^

error: `?const` is not permitted in trait objects
  --> $DIR/in-trait-object.rs:13:35
   |
LL | fn trait_object() -> &'static dyn ?const T { &S }
   |                                   ^^^^^^^^

error: `?const` is not permitted in trait objects
  --> $DIR/in-trait-object.rs:16:61
   |
LL | fn trait_object_in_apit(_: impl IntoIterator<Item = Box<dyn ?const T>>) {}
   |                                                             ^^^^^^^^

error: aborting due to 3 previous errors

